--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
       <meta name="author" content="John Doe , John Doe, John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./public/img/game.svg" type="image/x-icon" />
     <link rel="stylesheet" href="./public/css/style.css">
-    <title>Jeux Vidéos</title>
+    <title>Accueil</title>
 </head>
 <body>
     <!--haut de page , navbar + premier élément (pas forcément)-->
     <header>
         <!--navbar-->
-        <nav>
+        <nav class="navbar">
+            <img class="img_logo" src="./public/img/logo_site.jpg" alt="logo" width="100" height="150">
+            <ul>
+                <li>Premier element</li>
+                <li>Second element</li>
+                <li>Troisème element</li>
+                <li>Quatrième element</li>
+            </ul>
 
         </nav>
     </header>
