--- a/index.html
+++ b/index.html
@@ -13,14 +13,22 @@
     <header>
         <!--navbar-->
         <nav class="navbar">
-            <img class="img_logo" src="./public/img/logo_site.jpg" alt="logo" width="100" height="150">
+            <!--image a gauche-->
+            <div class="navbar_div_img">
+                <img class="img_logo" src="./public/img/logo_site.jpg" alt="logo" width="100" height="150">
+            </div>
+            <!--element au centre-->
             <ul>
                 <li>Premier element</li>
                 <li>Second element</li>
                 <li>Troisème element</li>
                 <li>Quatrième element</li>
+                <li>Cinquième element</li>
             </ul>
+            <!-- un dernier element a droite-->
+            <div class="color">
 
+            </div>
         </nav>
     </header>
     <!--partie principale du site , toutes les sections-->
